# template-deepresearch

./: .env-sample  .gitignore  README.md  blaxel.toml  pyproject.toml
.blaxel/: model.yaml
.blaxel/agents/template-deepresearch/: Dockerfile  agent.yaml
src/: agent.py  inputs.py  llmlogic.py  main.py  writer.py
src/agent/: agent.py  llmlogic.py  prompts.py  search.py  searchtypes.py  utils.py  writer.py
src/functions/: search.py
src/server/: router.py
