[project]
name = "template-deepresearch"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blaxel==0.0.70",
    "langchain-openai>=0.3.0,<0.4.0",
    "rich>=13.9.4",
]
[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F"]
